Add ColorCheckerSG target image submitted by Hening Betterman on the ArgyllCMS mailing list

--- a/data/targets/Makefile.am
+++ b/data/targets/Makefile.am
@@ -2,6 +2,7 @@ targetsdir = $(datadir)/gnome-color-manager/targets
 targets_DATA =					\
 	unknown.png				\
 	ColorCheckerDC.png			\
+	ColorCheckerSG.png			\
 	ColorChecker24.png			\
 	CMP-DigitalTarget3.png			\
 	QPcard_201.png				\
