Add a libtiff build require for future functionality

--- a/configure.ac
+++ b/configure.ac
@@ -155,6 +155,10 @@ PKG_CHECK_MODULES(X11, x11)
 AC_SUBST(X11_CFLAGS)
 AC_SUBST(X11_LIBS)
 
+AC_CHECK_LIB(tiff, TIFFReadRGBAImageOriented)
+AC_SUBST(TIFF_CFLAGS)
+AC_SUBST(TIFF_LIBS)
+
 dnl **** Check for cups ****
 AC_SUBST(CUPS_CFLAGS,"")
 AC_SUBST(CUPS_LIBS,"")
