--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -51,6 +51,7 @@ BuildRequires: libXrandr-devel
 BuildRequires: gnome-desktop-devel
 BuildRequires: lcms-devel
 BuildRequires: cups-devel
+BuildRequires: libtiff-devel
 
 %description
 gnome-color-manager is a session framework that makes it easy to manage, install
