trivial: fix make distcheck

--- a/data/icons/scalable/Makefile.am
+++ b/data/icons/scalable/Makefile.am
@@ -16,5 +16,7 @@ install-data-hook:
 	mkdir -p $(DESTDIR)$(DATADIR)/icons/hicolor/$(size)/mimetypes;
 	ln -fs $(iconsdir)/gnome-color-manager.svg $(DESTDIR)$(DATADIR)/icons/hicolor/$(size)/mimetypes/application-vnd.iccprofile.svg;
 
-EXTRA_DIST =		\
-	$(icons_DATA)
+EXTRA_DIST =				\
+	$(icons_DATA)			\
+	$(appicons_DATA)
+
