Add some ColorMunki and Huey figures to be added into the UI in the future

--- a/configure.ac
+++ b/configure.ac
@@ -254,6 +254,7 @@ data/icons/64x64/Makefile
 data/icons/scalable/Makefile
 data/tests/Makefile
 data/targets/Makefile
+data/figures/Makefile
 help/Makefile
 man/Makefile
 policy/Makefile
