trivial: rename GcmColorDevice to GcmColorimeter as the Device suffix implies it derives from GcmDevice, which it doesn't

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,8 +48,8 @@ libgcmshared_a_SOURCES =				\
 	gcm-xserver.h					\
 	gcm-client.c					\
 	gcm-client.h					\
-	gcm-color-device.c				\
-	gcm-color-device.h				\
+	gcm-colorimeter.c				\
+	gcm-colorimeter.h				\
 	gcm-device.c					\
 	gcm-device.h					\
 	gcm-device-xrandr.c				\
