Add the sypder attach image

--- a/data/figures/Makefile.am
+++ b/data/figures/Makefile.am
@@ -1,6 +1,7 @@
 figuresdir = $(datadir)/gnome-color-manager/icons
 figures_DATA = 	 			\
 	huey-attach.svg			\
+	spyder-attach.svg		\
 	munki-ambient.svg		\
 	munki-attach.svg		\
 	munki-calibrate.svg		\
