--- a/data/targets/Makefile.am
+++ b/data/targets/Makefile.am
@@ -6,6 +6,7 @@ targets_DATA =					\
 	ColorChecker24.png			\
 	CMP-DigitalTarget3.png			\
 	QPcard_201.png				\
+	LaserSoftDCPro.png			\
 	i1_RGB_Scan_14.png			\
 	IT872.png
 
