Do all the calibration UI in one place to avoid getting lots of GtkDialogs
This also allows us to fix up the UI in the future by adding more descriptions and images.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -219,6 +219,8 @@ gcm_prefs_SOURCES =					\
 	gcm-calibrate-argyll.h				\
 	gcm-calibrate-manual.c				\
 	gcm-calibrate-manual.h				\
+	gcm-calibrate-dialog.c				\
+	gcm-calibrate-dialog.h				\
 	gcm-brightness.c				\
 	gcm-brightness.h				\
 	gcm-prefs.c
