trivial: rename a file to make way for another

--- a/rules/Makefile.am
+++ b/rules/Makefile.am
@@ -1,6 +1,6 @@
 udevrulesdir = $(slashlibdir)/udev/rules.d
 udevrules_DATA =						\
-	95-gnome-color-manager.rules
+	95-gcm-devices.rules
 
 EXTRA_DIST =							\
 	$(udevrules_DATA)
