--- a/rules/Makefile.am
+++ b/rules/Makefile.am
@@ -1,5 +1,6 @@
 udevrulesdir = $(slashlibdir)/udev/rules.d
 udevrules_DATA =						\
+	95-gcm-colorimeters.rules				\
 	95-gcm-devices.rules
 
 EXTRA_DIST =							\
