--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -28,6 +28,7 @@ Requires:  cups
 Requires:  polkit
 Requires:  PackageKit
 Requires:  shared-color-profiles
+Requires:  libcanberra >= %{libcanberra_version}
 Requires(post):   scrollkeeper
 Requires(pre):    GConf2
 Requires(post):   GConf2
@@ -52,6 +53,7 @@ BuildRequires: gnome-desktop-devel
 BuildRequires: lcms-devel
 BuildRequires: cups-devel
 BuildRequires: libtiff-devel
+BuildRequires: libcanberra-devel >= %{libcanberra_version}
 
 %description
 gnome-color-manager is a session framework that makes it easy to manage, install
