trivial: add a clock figure to display when the ink is drying

--- a/data/figures/Makefile.am
+++ b/data/figures/Makefile.am
@@ -1,5 +1,6 @@
 figuresdir = $(datadir)/gnome-color-manager/icons
 figures_DATA = 	 			\
+	clock.svg			\
 	huey-attach.svg			\
 	spyder-attach.svg		\
 	munki-ambient.svg		\
