trivial: fix up a title when setting the profiles systemwide

--- a/policy/org.gnome.color.policy.in
+++ b/policy/org.gnome.color.policy.in
@@ -22,7 +22,7 @@
             set a profile set to all-white or all-black and thus make the
             other sessions unusable.
      -->
-    <_description>Reload a device</_description>
+    <_description>Install system color profiles</_description>
     <_message>Authentication is required to install the color profile for all users</_message>
     <icon_name>application-vnd.iccprofile</icon_name>
     <defaults>
