trivial: add a target image to help the user

--- a/data/figures/Makefile.am
+++ b/data/figures/Makefile.am
@@ -1,6 +1,7 @@
 figuresdir = $(datadir)/gnome-color-manager/icons
 figures_DATA = 	 			\
 	clock.svg			\
+	argyll-target.png		\
 	huey-attach.svg			\
 	spyder-attach.svg		\
 	munki-ambient.svg		\
