trivial: update the Fedora spec file

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -125,6 +125,7 @@ update-mime-database %{_datadir}/mime &> /dev/null || :
 %dir %{_datadir}/gnome-color-manager/icons
 %{_datadir}/gnome-color-manager/targets/*.png
 %{_datadir}/gnome-color-manager/icons/*.svg
+%{_datadir}/gnome-color-manager/icons/*.png
 %{_datadir}/man/man1/*.1.gz
 %{_datadir}/gnome/help/gnome-color-manager
 %{_datadir}/omf/gnome-color-manager
