trivial: fix make check

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,15 +6,17 @@ policy/org.gnome.color.policy.in
 src/egg-debug.c
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
+src/gcm-calibrate-dialog.c
 src/gcm-calibrate-manual.c
 src/gcm-client.c
+src/gcm-colorimeter.c
+src/gcm-device-xrandr.c
 src/gcm-dump-edid.c
 src/gcm-dump-profile.c
-src/gcm-device-xrandr.c
 src/gcm-fix-profile.c
-src/gcm-install-system-wide.c
 src/gcm-import.c
 src/gcm-inspect.c
+src/gcm-install-system-wide.c
 src/gcm-prefs.c
 src/gcm-profile.c
 src/gcm-session.c
