Allow the user to choose the calibration precision using an interactive dialog
Note, this is only shown if 'ask' is the value of /apps/gnome-color-manager/calibration_length in GConf

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -133,7 +133,7 @@
       <applyto>/apps/gnome-color-manager/calibration_length</applyto>
       <owner>gnome-color-manager</owner>
       <type>string</type>
-      <default>short</default>
+      <default>ask</default>
       <locale name="C">
         <short>The default calibration length.</short>
         <long>
@@ -141,6 +141,7 @@
           The option 'short' creates a quick profile, 'normal' a regular one,
           and 'long' takes a really long time, but is more precise and creates
           a better profile.
+          Use 'ask' if the want the user to choose.
         </long>
       </locale>
     </schema>
