Fix up some translatable messages. Fixes #612111

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -56,9 +56,9 @@
       <type>bool</type>
       <default>true</default>
       <locale name="C">
-        <short>Set the _ICC_PROFILE atom for applications.</short>
+        <short>Set the _ICC_PROFILE hint for applications.</short>
         <long>
-          If set to TRUE then the __ICC_PROFILE atom will be set, which
+          If set to TRUE then the __ICC_PROFILE hint will be set, which
           applications use to convert true color to screen color.
         </long>
       </locale>
