fix wrong word in data/gnome-color-manager.schemas.in (#612105)

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -141,7 +141,7 @@
           The option 'short' creates a quick profile, 'normal' a regular one,
           and 'long' takes a really long time, but is more precise and creates
           a better profile.
-          Use 'ask' if the want the user to choose.
+          Use 'ask' if you want the user to choose.
         </long>
       </locale>
     </schema>
