Use libsane to get our scanners, which means remote devices are now supported

--- a/configure.ac
+++ b/configure.ac
@@ -157,6 +157,10 @@ PKG_CHECK_MODULES(X11, x11)
 AC_SUBST(X11_CFLAGS)
 AC_SUBST(X11_LIBS)
 
+PKG_CHECK_MODULES(SANE, sane-backends)
+AC_SUBST(SANE_CFLAGS)
+AC_SUBST(SANE_LIBS)
+
 PKG_CHECK_MODULES(CANBERRA, libcanberra-gtk >= $CANBERRA_REQUIRED)
 AC_SUBST(CANBERRA_CFLAGS)
 AC_SUBST(CANBERRA_LIBS)
