--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -25,6 +25,7 @@ Requires:  udev
 Requires:  vte
 Requires:  lcms
 Requires:  cups
+Requires:  sane-backends-libs
 Requires:  polkit
 Requires:  PackageKit
 Requires:  shared-color-profiles
@@ -52,6 +53,7 @@ BuildRequires: libXrandr-devel
 BuildRequires: gnome-desktop-devel
 BuildRequires: lcms-devel
 BuildRequires: cups-devel
+BuildRequires: sane-backends-devel
 BuildRequires: libtiff-devel
 BuildRequires: libcanberra-devel >= %{libcanberra_version}
 
