--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -27,6 +27,7 @@ Requires:  lcms
 Requires:  cups
 Requires:  sane-backends-libs
 Requires:  polkit
+Requires:  libnotify
 Requires:  PackageKit
 Requires:  shared-color-profiles
 Requires:  libcanberra >= %{libcanberra_version}
