--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -1,6 +1,3 @@
-%define gtk2_version                    2.16.0
-%define dbus_glib_version               0.73
-%define unique_version                  1.0.0
 %define alphatag                        #ALPHATAG#
 
 %{!?python_sitelib: %define python_sitelib %(python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()")}
@@ -13,31 +10,17 @@ License:   GPLv2+
 Group:     Applications/System
 URL:       http://projects.gnome.org/gnome-color-manager/
 Source0:   http://download.gnome.org/sources/gnome-color-manager/2.29/%{name}-%{version}.tar.gz
-BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
-Requires:  gtk2 >= %{gtk2_version}
 Requires:  gnome-icon-theme
-Requires:  unique >= %{unique_version}
 Requires:  shared-mime-info
-Requires:  dbus-glib >= %{dbus_glib_version}
-Requires:  dbus-x11
-Requires:  udev
-Requires:  vte
-Requires:  lcms
-Requires:  cups
-Requires:  sane-backends-libs
-Requires:  polkit
-Requires:  libnotify
-Requires:  PackageKit
 Requires:  shared-color-profiles
-Requires:  libcanberra >= %{libcanberra_version}
 Requires(post):   scrollkeeper
 Requires(pre):    GConf2
 Requires(post):   GConf2
 Requires(preun):  GConf2
 Requires(postun): scrollkeeper
 
-BuildRequires: gtk2-devel >= %{gtk2_version}
+BuildRequires: gtk2-devel >= 2.16.0
 BuildRequires: scrollkeeper
 BuildRequires: gnome-doc-utils >= 0.3.2
 BuildRequires: desktop-file-utils
@@ -45,10 +28,10 @@ BuildRequires: gettext
 BuildRequires: libtool
 BuildRequires: vte-devel
 BuildRequires: gnome-doc-utils
-BuildRequires: unique-devel >= %{unique_version}
+BuildRequires: unique-devel >= 1.0.0
 BuildRequires: intltool
 BuildRequires: libgudev1-devel
-BuildRequires: dbus-glib-devel >= %{dbus_glib_version}
+BuildRequires: dbus-glib-devel >= 0.73
 BuildRequires: libXxf86vm-devel
 BuildRequires: libXrandr-devel
 BuildRequires: gnome-desktop-devel
@@ -56,7 +39,8 @@ BuildRequires: lcms-devel
 BuildRequires: cups-devel
 BuildRequires: sane-backends-devel
 BuildRequires: libtiff-devel
-BuildRequires: libcanberra-devel >= %{libcanberra_version}
+BuildRequires: libcanberra-devel
+BuildRequires: libnotify-devel
 
 %description
 gnome-color-manager is a session framework that makes it easy to manage, install
@@ -70,7 +54,6 @@ and generate color profiles in the GNOME desktop.
 make %{?_smp_mflags}
 
 %install
-rm -rf $RPM_BUILD_ROOT
 make install DESTDIR=$RPM_BUILD_ROOT
 
 for i in gcm-prefs gcm-import ; do
@@ -85,9 +68,7 @@ done
 rm -rf $RPM_BUILD_ROOT
 
 %post
-export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
-gconftool-2 --makefile-install-rule \
-        %{_sysconfdir}/gconf/schemas/gnome-color-manager.schemas >/dev/null || :
+%gconf_schema_upgrade gnome-color-manager
 touch --no-create %{_datadir}/icons/hicolor
 if [ -x /usr/bin/gtk-update-icon-cache ]; then
     gtk-update-icon-cache -q %{_datadir}/icons/hicolor &> /dev/null || :
@@ -96,18 +77,10 @@ update-desktop-database %{_datadir}/applications &> /dev/null || :
 update-mime-database %{_datadir}/mime &> /dev/null || :
 
 %pre
-if [ "$1" -gt 1 ]; then
-    export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
-    gconftool-2 --makefile-uninstall-rule \
-      %{_sysconfdir}/gconf/schemas/gnome-color-manager.schemas &> /dev/null || :
-fi
+gconf_schema_prepare gnome-color-manager
 
 %preun
-if [ "$1" -eq 0 ]; then
-    export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
-    gconftool-2 --makefile-uninstall-rule \
-      %{_sysconfdir}/gconf/schemas/gnome-color-manager.schemas &> /dev/null || :
-fi
+%gconf_schema_remove gnome-color-manager
 
 %postun
 touch --no-create %{_datadir}/icons/hicolor
