Add an experimental gcm-picker program to read spot colors

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,11 +17,13 @@ src/gcm-fix-profile.c
 src/gcm-import.c
 src/gcm-inspect.c
 src/gcm-install-system-wide.c
+src/gcm-picker.c
 src/gcm-prefs.c
 src/gcm-profile.c
 src/gcm-session.c
 src/gcm-utils.c
 [type: gettext/glade]data/gcm-calibrate.ui
+[type: gettext/glade]data/gcm-picker.ui
 [type: gettext/glade]data/gcm-prefs.ui
 [type: gettext/glade]data/gcm-spawn.ui
 
