--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -31,6 +31,7 @@ $(service_DATA): $(service_in_files) Makefile
 pkgdata_DATA =						\
 	gcm-calibrate.ui				\
 	gcm-spawn.ui					\
+	gcm-picker.ui					\
 	gcm-prefs.ui
 
 EXTRA_DIST =						\
