--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -14,6 +14,7 @@ Source0:   http://download.gnome.org/sources/gnome-color-manager/2.29/%{name}-%{
 Requires:  gnome-icon-theme
 Requires:  shared-mime-info
 Requires:  shared-color-profiles
+Requires:  yelp
 Requires(post):   scrollkeeper
 Requires(pre):    GConf2
 Requires(post):   GConf2
