Use a new application icon
Signed-off-by: Richard Hughes <richard@hughsie.com>

--- a/configure.ac
+++ b/configure.ac
@@ -233,6 +233,7 @@ data/icons/24x24/Makefile
 data/icons/32x32/Makefile
 data/icons/48x48/Makefile
 data/icons/64x64/Makefile
+data/icons/256x256/Makefile
 data/icons/scalable/Makefile
 data/tests/Makefile
 data/targets/Makefile
