trivial: I'm informed that GConf short names should not have trailing dots

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -8,7 +8,7 @@
       <type>float</type>
       <default>1.0</default>
       <locale name="C">
-        <short>The default gamma to use for monitors with no previous value set.</short>
+        <short>The default gamma to use for monitors with no previous value set</short>
         <long>
           Gamma is adjusted to affect the color of the attached monitor.
           Traditionally Linux has used a gamma value of 1.0, but this makes
@@ -26,7 +26,7 @@
       <type>bool</type>
       <default>true</default>
       <locale name="C">
-        <short>Whether the display should be globally corrected or left to applications.</short>
+        <short>Whether the display should be globally corrected or left to applications</short>
         <long>If set to TRUE then the video LUT is set with the display profile</long>
       </locale>
     </schema>
@@ -38,7 +38,7 @@
       <type>bool</type>
       <default>true</default>
       <locale name="C">
-        <short>Whether ICC profiles should be loaded from external disks.</short>
+        <short>Whether ICC profiles should be loaded from external disks</short>
         <long>
           If set to TRUE then external disks are searched for device ICC profiles
           at startup, for instance looking in the OSX library folder or
@@ -56,7 +56,7 @@
       <type>bool</type>
       <default>true</default>
       <locale name="C">
-        <short>Set the _ICC_PROFILE hint for applications.</short>
+        <short>Set the _ICC_PROFILE hint for applications</short>
         <long>
           If set to TRUE then the __ICC_PROFILE hint will be set, which
           applications use to convert true color to screen color.
@@ -71,7 +71,7 @@
       <type>bool</type>
       <default>false</default>
       <locale name="C">
-        <short>Show the fine tuning controls for display devices.</short>
+        <short>Show the fine tuning controls for display devices</short>
         <long>
           If set to TRUE then the fine tuning controls are visible. This allows
           the user to change the display profile outside of what the ICC profile
@@ -87,7 +87,7 @@
       <type>string</type>
       <default>perceptual</default>
       <locale name="C">
-        <short>The rendering intent to use for the display, e.g. 'perceptual'.</short>
+        <short>The rendering intent to use for the display, e.g. 'perceptual'</short>
         <long>The rendering intent to use for the display, e.g. 'perceptual'.</long>
       </locale>
     </schema>
@@ -99,7 +99,7 @@
       <type>string</type>
       <default>perceptual</default>
       <locale name="C">
-        <short>The rendering intent to use for softproofs, e.g. 'perceptual'.</short>
+        <short>The rendering intent to use for softproofs, e.g. 'perceptual'</short>
         <long>The rendering intent to use for softproofs, e.g. 'perceptual'.</long>
       </locale>
     </schema>
@@ -111,7 +111,7 @@
       <type>string</type>
       <default>/usr/share/color/icc/Argyll/sRGB.icm</default>
       <locale name="C">
-        <short>The default RGB profile.</short>
+        <short>The default RGB profile</short>
         <long>The RGB profile filename to be used by applications by default.</long>
       </locale>
     </schema>
@@ -123,7 +123,7 @@
       <type>string</type>
       <default>/usr/share/color/icc/Fogra27L.icc</default>
       <locale name="C">
-        <short>The default CMYK profile.</short>
+        <short>The default CMYK profile</short>
         <long>The CMYK profile filename to be used by applications by default.</long>
       </locale>
     </schema>
@@ -135,7 +135,7 @@
       <type>string</type>
       <default>ask</default>
       <locale name="C">
-        <short>The default calibration length.</short>
+        <short>The default calibration length</short>
         <long>
           The length of calibration, as this is proportional to the accuracy.
           The option 'short' creates a quick profile, 'normal' a regular one,
@@ -153,7 +153,7 @@
       <type>int</type>
       <default>15552000</default>
       <locale name="C">
-        <short>The duration between sending notifications to recalibrate a display.</short>
+        <short>The duration between sending notifications to recalibrate a display</short>
         <long>
           This is the number of seconds in between notifying the user to
           recalibrate each display device. Set to 0 to disable the notification.
@@ -168,7 +168,7 @@
       <type>int</type>
       <default>15552000</default>
       <locale name="C">
-        <short>The duration between sending notifications to recalibrate a printer.</short>
+        <short>The duration between sending notifications to recalibrate a printer</short>
         <long>
           This is the number of seconds in between notifying the user to
           recalibrate each printer device. Set to 0 to disable the notification.
