--- a/configure.ac
+++ b/configure.ac
@@ -124,16 +124,25 @@ PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1 >= $DBUS_GLIB_REQUIRED)
 PKG_CHECK_MODULES(X11, x11)
 PKG_CHECK_MODULES(NOTIFY, libnotify)
 
-PKG_CHECK_MODULES(SANE, sane-backends, has_sane=yes, has_sane=no)
-if test $has_sane = "no"; then
-	AC_CHECK_HEADER(sane/sane.h, has_sane=yes, has_sane=no)
+AC_ARG_ENABLE(sane, AS_HELP_STRING([--enable-sane],[Enable SANE support for scanner support]), enable_sane=$enableval,
+				   enable_sane=yes)
+dnl **** Check for SANE ****
+if test x$enable_sane != xno; then
+	PKG_CHECK_MODULES(SANE, sane-backends, has_sane=yes, has_sane=no)
 	if test $has_sane = "no"; then
-		AC_MSG_ERROR([Cannot fine SANE])
+		AC_CHECK_HEADER(sane/sane.h, has_sane=yes, has_sane=no)
+		if test $has_sane = "no"; then
+			AC_MSG_ERROR([Cannot fine SANE])
+		fi
+		SANE_CFLAGS=""
+		SANE_LIBS="-lsane"
+		AC_SUBST(SANE_CFLAGS)
+		AC_SUBST(SANE_LIBS)
 	fi
-	SANE_CFLAGS=""
-	SANE_LIBS="-lsane"
-	AC_SUBST(SANE_CFLAGS)
-	AC_SUBST(SANE_LIBS)
+fi
+AM_CONDITIONAL(GCM_USE_SANE, test x$enable_sane = xyes)
+if test x$enable_sane = xyes; then
+	AC_DEFINE(GCM_USE_SANE,1,[Use SANE support for detecting scanners])
 fi
 
 PKG_CHECK_MODULES(CANBERRA, libcanberra-gtk >= $CANBERRA_REQUIRED)
@@ -258,6 +267,7 @@ echo "
         cflags:                    ${CFLAGS}
         cppflags:                  ${CPPFLAGS}
         PackageKit integration:    ${enable_packagekit}
+        SANE support:              ${enable_sane}
         building unit tests:       ${enable_tests}
         gconf-schema dir:          $GCONF_SCHEMA_FILE_DIR
 "
