Show much more detail in the color picker UI and allow the user to choose a RGB colorspace

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,6 +13,7 @@ src/gcm-colorimeter.c
 src/gcm-device-xrandr.c
 src/gcm-dump-edid.c
 src/gcm-dump-profile.c
+src/gcm-enum.c
 src/gcm-fix-profile.c
 src/gcm-import.c
 src/gcm-inspect.c
