Centralize all the EXIF data reading into GcmExif

--- a/data/tests/Makefile.am
+++ b/data/tests/Makefile.am
@@ -1,4 +1,7 @@
 TEST_FILES =						\
+	test.tif					\
+	test.png					\
+	test.jpg					\
 	cie-widget.png					\
 	gamma-widget.png				\
 	ibm-t61.icc					\
