--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,6 +35,8 @@ libgcmshared_a_SOURCES =				\
 	gcm-screen.h					\
 	gcm-xyz.c					\
 	gcm-xyz.h					\
+	gcm-exif.c					\
+	gcm-exif.h					\
 	gcm-print.c					\
 	gcm-print.h					\
 	gcm-utils.c					\
