Remove all traces of GConf now that we can rely on dconf

--- a/configure.ac
+++ b/configure.ac
@@ -103,7 +103,6 @@ dnl ---------------------------------------------------------------------------
 GLIB_REQUIRED=2.14.0
 GTK_REQUIRED=2.14.0
 GNOMEDESKTOP_REQUIRED=2.14.0
-GCONF_REQUIRED=2.31.1
 UNIQUE_REQUIRED=1.0.0
 VTE_REQUIRED=0.25.1
 DBUS_GLIB_REQUIRED=0.73
@@ -117,7 +116,6 @@ PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 gthread-2.0 gio-2
 PKG_CHECK_MODULES(XORG, xxf86vm xrandr)
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GTK_REQUIRED)
 PKG_CHECK_MODULES(GNOMEDESKTOP, gnome-desktop-2.0 >= $GNOMEDESKTOP_REQUIRED)
-PKG_CHECK_MODULES(GCONF, gconf-2.0 >= $GCONF_REQUIRED)
 PKG_CHECK_MODULES(UNIQUE, unique-1.0 >= $UNIQUE_REQUIRED)
 PKG_CHECK_MODULES(VTE, vte >= $VTE_REQUIRED)
 PKG_CHECK_MODULES(GUDEV, gudev-1.0)
@@ -178,10 +176,8 @@ if test "x$HAVE_CUPS" != "xyes"; then
 	AC_MSG_ERROR([cups-devel is required for gnome-color-manager])
 fi
 
-AC_PATH_PROG(GCONFTOOL, gconftool-2)
-AM_GCONF_SOURCE_2
-AC_SUBST(gsettingsupdateschemacache,
-	`pkg-config --variable gsettingsupdateschemacache gio-2.0`)
+#AC_SUBST(gsettingsupdateschemacache,
+#	`pkg-config --variable gsettingsupdateschemacache gio-2.0`)
 
 dnl ---------------------------------------------------------------------------
 dnl - Make paths available for source files
@@ -273,6 +269,5 @@ echo "
         PackageKit integration:    ${enable_packagekit}
         SANE support:              ${enable_sane}
         building unit tests:       ${enable_tests}
-        gconf-schema dir:          $GCONF_SCHEMA_FILE_DIR
 "
 
