--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -15,6 +15,7 @@ Requires:  gnome-icon-theme
 Requires:  shared-mime-info
 Requires:  shared-color-profiles
 Requires:  yelp
+Requires:  dconf
 Requires(post):   scrollkeeper
 Requires(pre):    GConf2
 Requires(post):   GConf2
