--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,7 @@
 data/gcm-apply.desktop.in
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
-data/gnome-color-manager.schemas.in
+data/org.gnome.color-manager.gschema.xml
 policy/org.gnome.color.policy.in
 src/egg-debug.c
 src/gcm-calibrate-argyll.c
